# chip8-emu

./: Cargo.toml  LICENSE.md  flake.nix
rom/: PONG  PONG2.asm  PONG2.hex
src/: cpu.rs  gui.rs  lib.rs  main.rs  terminal.rs
