[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chip8"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["ttf"] }
tui = "0.19.0"
